Added endpoint for getting all offers of specific user